<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:tileMode="repeat"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_gradient">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".40"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Titles"
                android:layout_weight=".10"
                android:text="@string/company_name"/>
            <EditText
                style="@style/Inputs"
                android:id="@+id/txtUser"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".15"
                android:drawableLeft="@drawable/user_icon"
                android:hint="@string/user_name"/>
            <EditText
                style="@style/Inputs"
                android:id="@+id/txtPass"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".15"
                android:hint="@string/password"
                android:drawableLeft="@drawable/user_pass"
                android:inputType="textPassword"/>
            <Button
                android:layout_marginTop="75dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".10"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/custom_button"
                android:onClick="onButtonClick"
                />
            <TextView
                style="@style/Inputs"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".10"
                android:text="@string/forgot_password"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
